enershelf/static/sass/components/_offcanvas.scss
.offcanvas-view {
  @extend .offcanvas-start;
  @extend .w-100;
  @extend .overflow-auto;
  z-index: 1100;
  top: $top-nav-height;

  &__wrap {
    @extend .container;
    @extend .py-5;
    max-width: 44rem;
  }

  &__title {
    @extend .fs-1;
    @extend .fw-bold;
  }

  &__subtitle {
    @extend .fw-bold;
    @extend .pt-2;
  }

  &__body {
    @extend .py-3;
  }

  &__logos {
    @extend .d-flex;
    @extend .flex-row;
    @extend .justify-content-between;
    @extend .pt-4;
  }

  &__logo {
    @extend .pe-2;

    &--rli img {
      width: 8.5rem;
    }

    &--eaa img {
      width: 9rem;
    }

    &--rg img {
      width: 12rem;
    }

    &--bbsr img {
      width: 11.5rem;
    }

    &--bmwsb img {
      width: 12.5rem;
    }

    &--bmi img {
      width: 10rem;
    }
  }
}

